[package]
name = "cause"
version = "0.1.0"
edition = "2018"
authors = ["msr1k <msr0210@gmail.com>"]
license = "MIT"
description = "A generic [std::error::Error] implementation."
repository = "https://github.com/msr1k/cause"
documentation = "https://docs.rs/cause"
keywords = ["error"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
